2012-01-18  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (ace-jump-mode): Add ace-jump-mode.
	(and): Don't save ac completion history file.

	* init-basic.el (300): Setup zone-when-idle.

2012-01-15  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (init-emms): Set emms to support mpg123.

2012-01-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (kbd): Bind Ctrl + mouse wheel to text scale.

	* init-misc.el: Add volatile-highlights.

2012-01-09  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add color-theme.

2012-01-04  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (filesets-data): Fix filesets.

2012-01-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (filesets-data): Use filesets.

	* init-misc.el (htmlize-buffer): autoload htmlize.

2011-12-28  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Disable display time.

	* init-misc.el (init-emms): Update emms modeline setting.

2011-12-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (after-make-frame-functions): Fix background color.
	(after-make-frame-functions): Fix frame's background color.

	* init-misc.el (require): Fix highlight-symbol face.

	* init-basic.el (dired-mode-hook): Fix dired key setting(terminal
	can't know [return], only (kbd "RET")).
	: Fix dired's single buffer.
	: Delete diary window when appt-activate.

2011-12-13  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (inhibit-default-init): Disable load the default library.

2011-12-12  Meteor Liu  <meteor1113@gmail.com>

	* README (Email): Update README.

2011-11-18  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("code-imports"): Add code-imports.el

2011-11-02  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (fboundp): Change ecb-compile-window-height to 0.15

2011-10-20  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (appt-display-duration): Don't delete appt window.

2011-10-19  Meteor Liu  <meteor1113@gmail.com>
